@@ -1,3 +1,7 @@
+2007-05-27  Paolo Bonzini  <bonzini@gnu.org>
+
+	* confsubdir.m4: Move here from newlib.
+
 2007-05-23  Paolo Bonzini  <bonzini@gnu.org>
 
 	PR bootstrap/32009
